--- a/static/style2.css
+++ b/static/style2.css
@@ -48,20 +48,35 @@ a.orange:hover {
 
 #Root {
 	width: 800px;
-	height:auto;
-	margin: 30px auto 0px auto;
+	height: 100%;
+	margin: 20px auto 30px auto;
+	margin-bottom: 20px;
 	padding: 10px;
 
+	clear: both;
 
+	border:1px solid; 
+	border-color:#e5e5e5 #dbdbdb #d2d2d2; 
+	-webkit-box-shadow:rgba(0,0,0,0.3) 0 1px 3px; 
+	-moz-box-shadow:rgba(0,0,0,0.3) 0 1px 3px; 
+	box-shadow:rgba(0,0,0,0.3) 0 1px 3px;
+	border-radius:4px; 
+	/*-webkit-border-radius:4px; */
+	/*-moz-border-radius:4px; */
+	-o-border-radius:4px; 
+	-khtml-border-radius:4px;
 	background-color: #fff;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
 	border-radius: 10px;
 	border: 2px solid rgba(0,0,0,0.05);
 	font-size: 15px;
-	-webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.6);
-	-moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.6);
+/*	-webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.6);
+	-moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.6);*/
 }
+
+/**** Clearfix ****/
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; }
 
 #Bottom {
 	width: 800px;
@@ -74,6 +89,24 @@ a.orange:hover {
 
 /* CLASSes */
 
+.col3 { width: 110px; }
+.col3 img { max-width: 110px; }
+.box {
+  margin: 5px;
+  padding: 5px;
+  background: #D8D5D2;
+  font-size: 11px;
+  line-height: 1.4em;
+  float: left;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+}
+.box h2 {
+  font-size: 14px;
+  font-weight: 200;
+}
+
 .bar{
 	width: 800px;
 	height:auto;
@@ -82,13 +115,8 @@ a.orange:hover {
 
 
 	background-color: #fff;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-	border: 2px solid rgba(0,0,0,0.05);
-	font-size: 15px;
-	-webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.6);
-	-moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.6);
+	border-radius:4px; -webkit-border-radius:4px; -moz-border-radius:4px; -o-border-radius:4px; -khtml-border-radius:4px;
+	background:#fff; border:1px solid; border-color:#e5e5e5 #dbdbdb #d2d2d2; -webkit-box-shadow:rgba(0,0,0,0.3) 0 1px 3px; -moz-box-shadow:rgba(0,0,0,0.3) 0 1px 3px; box-shadow:rgba(0,0,0,0.3) 0 1px 3px; 
 }
 
 .item {
@@ -125,6 +153,8 @@ a.orange:hover {
     -moz-border-radius: 5px;
           border-radius: 5px;
 }
+
+.column img { max-width: 110px; }
 
 .column_title {
 	color: #ccc;
